# path-tracing

./: .gitignore  CMakeLists.txt  README.md
doc/: pbrt-notes.md  ray-tracing.md
doc/notes/: chaper-5.md
notes/smallpt/: README.md
reading-notes/: ray-tracing.md
reading-notes/smallpt/: main.cpp
rt/: main.cpp
rt/accelerator/: bvh.h
rt/camera/: environment_camera.h  projective_camera.cpp  realistic_camera.cpp
rt/core/: geometry.h  light.h  material.h  spectrum.h
rt/shape/: sphere.h
src/: CMakeLists.txt
src/accelerator/: bvh.cpp  kd_tree.cpp
src/cli/: CMakeLists.txt  main.cpp
src/core/: core.h  memory.cpp  primitive.cpp  texture.cpp  texture.h
src/material/: matte.h  plastic.cpp  plastic.h
src/rt/: CMakeLists.txt
src/rt/accelerator/: bvh.cpp  kd_tree.cpp  kd_tree.h
src/rt/camera/: environment_camera.cpp  orthographic.cpp  orthographic.h  orthographic_camera.cpp  orthographic_camera.h  projective.cpp  projective.h  projective_camera.h  realistic.cpp  realistic.h  realistic_camera.h
src/rt/core/: bitmap.cpp  bitmap.h  camera.h  common.h  geometry.h  interaction.h  linear_math.h  linear_math_test.cpp  material.cpp  material.h  math.cpp  math.h  medium.h  memory.cpp  memory.h  primitive.cpp  primitive.h  ray.h  shape.h  spectrum.h  texture.h
src/rt/material/: matte.cpp
src/rt/shape/: mesh.cpp  mesh.h  sphere.h
src/rt/texture/: image.h
src/shape/: sphere.cpp
src/test/: CMakeLists.txt  test_main.cpp
src/test/core/: bitmap_test.cpp  geometry_test.cpp  math_test.cpp  memory_test.cpp  (+1 more)
tiny-rt/: CMakeLists.txt  README.md  main.cpp
